--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -99,16 +99,16 @@ hr {
   font-size: 2.6rem;
 }
 
-#App .container .demo .contract-container {
+#App .container .voting .contract-container {
   display: flex;
 }
 
-#App .container .demo .contract-container code {
+#App .container .voting .contract-container code {
   min-width: 42rem;
   border-radius: 1rem 0 0 1rem;
 }
 
-#App .container .demo .contract-container .btns {
+#App .container .voting .contract-container .btns {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -119,7 +119,7 @@ hr {
   border-radius: 0 1rem 1rem 0;
 }
 
-#App .container .demo .contract-container .btns > * {
+#App .container .voting .contract-container .btns > * {
   width: 12rem;
   display: flex;
   align-items: center;
@@ -132,11 +132,11 @@ hr {
   cursor: pointer;
 }
 
-#App .container .demo .contract-container .btns > *:hover {
+#App .container .voting .contract-container .btns > *:hover {
   background-color: var(--dark-gray);
 }
 
-#App .container .demo .contract-container .btns .input-btn input {
+#App .container .voting .contract-container .btns .input-btn input {
   width: 4rem;
   text-align: center;
   font-family: monospace;
