--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -11,9 +11,6 @@ html {
 #App {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 1.6rem;
   --primary-color: #1266cc;
   --secondary-color: #f96400;
@@ -24,9 +21,8 @@ html {
 }
 
 #App .container {
-  width: 40%;
+  width: 80%;
   min-width: 60rem;
-  max-width: 75rem;
   height: 100%;
 }
 
@@ -101,6 +97,7 @@ hr {
 
 #App .container .voting .contract-container {
   display: flex;
+  justify-content: space-around;
 }
 
 #App .container .voting .contract-container p{
